# releaser-rs

./: Cargo.toml  Jenkinsfile  README.md
src/: error.rs  lib.rs  main.rs  release.rs  version.rs
