[package]
name = "feenk-releaser"
version = "0.2.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[lib]

[[bin]]
name = "feenk-releaser"
path = "src/main.rs"

[dependencies]
octocrab = "0.17"
futures = "0.3"
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = [ "codec" ] }
semver = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ] }
question = "0.2"
reqwest = { version = "0.11", features = [ "stream" ] }
lazy_static = "1.4"
user-error = "1.2"
thiserror = "1.0"
url = "2.3"