[package]
name = "feenk-releaser"
version = "0.2.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[lib]

[[bin]]
name = "feenk-releaser"
path = "src/main.rs"

[dependencies]
octocrab = "0.39"
futures = "0.3"
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = [ "codec" ] }
semver = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ] }
question = "0.2"
reqwest = { version = "0.12", features = [ "stream" ] }
lazy_static = "1.4"
user-error = "1.2"
thiserror = "1.0"
url = "2.3"
bytes = "1.7"
http = "1.1"
log = "0.4"